# distant_speech_recognition

./: README.md
btk20_src/: CMakeLists.txt  run.sh
btk20_src/aec/: CMakeLists.txt
btk20_src/beamformer/: CMakeLists.txt
btk20_src/convolution/: CMakeLists.txt
btk20_src/dereverberation/: CMakeLists.txt
btk20_src/feature/: CMakeLists.txt
btk20_src/gsl_release/lib/: libgslcblas.so.0.0.0
btk20_src/gsl_release/lib/pkgconfig/: gsl.pc
btk20_src/lms/: CMakeLists.txt
btk20_src/localization/: CMakeLists.txt
btk20_src/matrix/: CMakeLists.txt
btk20_src/modulated/: CMakeLists.txt
btk20_src/objective_measure/: CMakeLists.txt
btk20_src/postfilter/: CMakeLists.txt
btk20_src/sad/: CMakeLists.txt
btk20_src/square_root/: CMakeLists.txt
btk20_src/stream/: CMakeLists.txt
btk20_src/tde/: CMakeLists.txt
